# simulate-pyshics-game

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/aviadkorakin/demonstrate_2d_physics/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/levels/: level1.json  level2.json  level3.json  level4.json  level5.json  level6.json  level7.json  level8.json
app/src/main/cpp/: BodyFactory.cpp  BodyFactory.h  CMakeLists.txt  Extras.cpp  Extras.h  NativeBridge.cpp  NativeBridge.h  PhysicsWorld.cpp  PhysicsWorld.h  native-lib.cpp
app/src/main/java/com/aviadkorakin/demonstrate_2d_physics/: Box2DEngineNativeBridge.kt  GameActivity.kt  MainActivity.kt  PhysicsView.kt  WinActivity.kt  example.txt
app/src/main/java/com/aviadkorakin/demonstrate_2d_physics/level_manager/: Level.kt  ResourceMap.kt
app/src/main/res/layout/: activity_game.xml  activity_main.xml  activity_win.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/aviadkorakin/demonstrate_2d_physics/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
